--- a/index.html
+++ b/index.html
@@ -114,16 +114,58 @@
             font-size: 1.1rem;
         }
 
-        .contact-link {
-            color: var(--white);
-            text-decoration: none;
-            font-weight: 500;
+        .clickable-contact {
+            cursor: pointer;
             transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+            background: linear-gradient(135deg, rgba(99, 102, 241, 0.1), rgba(139, 92, 246, 0.1));
+            border: 1px solid rgba(99, 102, 241, 0.2);
+            border-radius: 16px;
+            padding: 1rem;
         }
 
-        .contact-link:hover {
+        .clickable-contact::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.1), transparent);
+            transition: left 0.5s ease;
+        }
+
+        .clickable-contact:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 24px rgba(99, 102, 241, 0.3);
+            background: linear-gradient(135deg, rgba(99, 102, 241, 0.2), rgba(139, 92, 246, 0.2));
+            border-color: var(--accent);
+        }
+
+        .clickable-contact:hover::before {
+            left: 100%;
+        }
+
+        .clickable-contact:active {
+            transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(99, 102, 241, 0.2);
+        }
+
+        .contact-text {
+            color: var(--white);
+            font-weight: 500;
+            font-size: 0.9rem;
+            transition: color 0.3s ease;
+        }
+
+        .clickable-contact:hover .contact-text {
             color: var(--accent);
-            text-decoration: underline;
+        }
+
+        .clickable-contact:hover i {
+            color: var(--secondary);
+            transform: scale(1.1);
         }
 
         /* Main Content */
@@ -971,13 +1013,13 @@
             <h1>Mohinder Batra</h1>
             <div class="subtitle">QA Automation Engineer</div>
             <div class="contact-grid">
-                <div class="contact-item">
+                <div class="contact-item clickable-contact" onclick="window.location.href='mailto:mohinderbatra@hotmail.com'">
                     <i class="fas fa-envelope"></i>
-                    <a href="mailto:mohinderbatra@hotmail.com" class="contact-link">Send an Email</a>
+                    <span class="contact-text">Send an Email</span>
                 </div>
-                <div class="contact-item">
+                <div class="contact-item clickable-contact" onclick="window.open('https://www.linkedin.com/in/mohinder-batra/', '_blank')">
                     <i class="fab fa-linkedin"></i>
-                    <a href="https://www.linkedin.com/in/mohinder-batra/" target="_blank" class="contact-link">Connect on LinkedIn</a>
+                    <span class="contact-text">Connect on LinkedIn</span>
                 </div>
             </div>
         </header>
