--- a/index.html
+++ b/index.html
@@ -1092,10 +1092,10 @@
                                     <strong>Tools</strong>
                                 </div>
                                 <div class="skill-tags">
-                                    <span class="interactive-skill-tag" data-level="expert">Selenium</span>
+                                    <span class="interactive-skill-tag" data-level="expert">Cypress Cloud</span>
                                     <span class="interactive-skill-tag" data-level="expert">Jenkins</span>
                                     <span class="interactive-skill-tag" data-level="advanced">Jira</span>
-                                    <span class="interactive-skill-tag" data-level="expert">IntelliJ</span>
+                                    <span class="interactive-skill-tag" data-level="expert">Visual Studio</span>
                                 </div>
                             </div>
                             <div class="skill-category">
@@ -1104,10 +1104,11 @@
                                     <strong>CI/CD</strong>
                                 </div>
                                 <div class="skill-tags">
+                                    <span class="interactive-skill-tag" data-level="expert">AWS CodeBuild / Pipeline</span>
+                                    <span class="interactive-skill-tag" data-level="expert">AWS CloudFormation</span>
                                     <span class="interactive-skill-tag" data-level="expert">Git</span>
                                     <span class="interactive-skill-tag" data-level="advanced">Maven</span>
                                     <span class="interactive-skill-tag" data-level="expert">Cucumber</span>
-                                    <span class="interactive-skill-tag" data-level="advanced">AWS</span>
                                 </div>
                             </div>
                             <div class="skill-category">
@@ -1116,7 +1117,7 @@
                                     <strong>Tech</strong>
                                 </div>
                                 <div class="skill-tags">
-                                    <span class="interactive-skill-tag" data-level="expert">Java</span>
+                                    <span class="interactive-skill-tag" data-level="expert">JavaScript</span>
                                     <span class="interactive-skill-tag" data-level="advanced">Salesforce</span>
                                     <span class="interactive-skill-tag" data-level="intermediate">JMeter</span>
                                     <span class="interactive-skill-tag" data-level="advanced">LeanFT</span>
